--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "devDependencies": {
         "eslint": "^8.51.0",
         "eslint-config-plus": "^1.0.6",
-        "eslint-plugin-html": "^7.1.0"
+        "eslint-plugin-html": "^7.1.0",
+        "file-saver": "^2.0.5"
     }
 }
