--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "xhs-downloader",
+    "name": "turbo-downloader",
     "version": "1.0.0",
     "description": "",
     "type": "module",
@@ -14,7 +14,8 @@
         "eight-colors": "^1.0.3",
         "esbuild": "^0.19.4",
         "esbuild-sass-plugin": "^2.16.0",
-        "playwright": "^1.39.0"
+        "playwright": "^1.39.0",
+        "ws": "^8.14.2"
     },
     "devDependencies": {
         "eslint": "^8.51.0",
