--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     },
     "license": "MIT",
     "dependencies": {
-        "chrome-launcher": "^1.1.0",
         "eight-colors": "^1.0.3",
-        "esbuild": "^0.19.4",
-        "esbuild-sass-plugin": "^2.16.0",
-        "open": "^9.1.0",
-        "playwright": "^1.39.0",
-        "ws": "^8.14.2"
+        "esbuild": "^0.19.11",
+        "esbuild-sass-plugin": "^2.16.1",
+        "koa": "^2.15.0",
+        "koa-static-resolver": "^1.0.4",
+        "open": "^10.0.2",
+        "playwright": "^1.40.1",
+        "ws": "^8.16.0"
     },
     "devDependencies": {
-        "eslint": "^8.51.0",
+        "eslint": "^8.56.0",
         "eslint-config-plus": "^1.0.6",
         "eslint-plugin-html": "^7.1.0",
         "file-saver": "^2.0.5"
