--- a/package.json
+++ b/package.json
@@ -6,23 +6,25 @@
     "main": "lib/index.js",
     "scripts": {
         "build": "node ./lib/build.js",
-        "start": "npm run build && node ./"
+        "start": "npm run build && node ./",
+        "jd": "node ./lib/jd.js"
     },
     "license": "MIT",
     "dependencies": {
-        "eight-colors": "^1.3.0",
-        "esbuild": "^0.20.2",
-        "esbuild-sass-plugin": "^3.2.0",
-        "koa": "^2.15.2",
+        "eight-colors": "^1.3.1",
+        "esbuild": "^0.24.2",
+        "esbuild-sass-plugin": "^3.3.1",
+        "koa": "^2.15.3",
         "koa-static-resolver": "^1.0.6",
+        "mouse-helper": "^1.0.7",
         "open": "^10.1.0",
-        "playwright": "^1.42.1",
-        "ws": "^8.16.0"
+        "playwright": "^1.50.0",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
-        "eslint": "^8.57.0",
-        "eslint-config-plus": "^1.0.6",
-        "eslint-plugin-html": "^8.0.0",
+        "eslint": "^9.19.0",
+        "eslint-config-plus": "^2.0.2",
+        "eslint-plugin-html": "^8.1.2",
         "file-saver": "^2.0.5"
     }
 }
